--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
-        //"**/*.meta" : true
+        "**/*.meta" : true
     },
     "omnisharp.useModernNet": false,
     "omnisharp.path": "latest",
